--- a/src/pages/Login/index.module.css
+++ b/src/pages/Login/index.module.css
@@ -31,7 +31,7 @@
 }
 
 .animate {
-	animation: borderanimate 2s ;
+	animation: borderanimate 2s;
 }
 
 .container {
@@ -41,22 +41,18 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: radial-gradient(
-		rgb(255, 235, 163),
-		rgb(249, 239, 56),
-		rgb(145, 112, 4)
-	);
+	background: radial-gradient(rgb(255, 235, 163),
+			rgb(249, 239, 56),
+			rgb(145, 112, 4));
 }
 
 .formBox {
 	width: 50%;
 	height: 67%;
-	background: repeating-linear-gradient(
-		190deg,
-		rgba(0, 55, 66, 0.7),
-		rgba(0, 51, 77, 0.4),
-		rgba(0, 55, 99, 0.9)
-	);
+	background: repeating-linear-gradient(190deg,
+			rgba(0, 55, 66, 0.7),
+			rgba(0, 51, 77, 0.4),
+			rgba(0, 55, 99, 0.9));
 	border-radius: 100vh 1vh;
 	padding-top: 3vh;
 }
@@ -65,15 +61,13 @@
 	position: absolute;
 	width: 50%;
 	height: 67%;
-	background: repeating-linear-gradient(
-		190deg,
-		rgba(242, 228, 77, 0.7),
-		rgba(0, 150, 177, 0.4),
-		rgba(22, 207, 220, 0.9)
-	);
+	background: repeating-linear-gradient(190deg,
+			rgba(242, 228, 77, 0.7),
+			rgba(0, 150, 177, 0.4),
+			rgba(22, 207, 220, 0.9));
 	border-radius: 1vh 100vh;
 	border: ridge 1vh #065a5a;
-	animation: borderanimate  7s;
+	animation: borderanimate 7s;
 	flex-direction: column;
 	display: flex;
 	align-items: center;
@@ -82,12 +76,10 @@
 
 .formInnerBox {
 	padding-top: 3vh;
-	background: repeating-linear-gradient(
-		190deg,
-		rgba(0, 45, 55, 0.7),
-		rgba(0, 41, 66, 0.4),
-		rgba(0, 45, 88, 0.9)
-	);
+	background: repeating-linear-gradient(190deg,
+			rgba(0, 45, 55, 0.7),
+			rgba(0, 41, 66, 0.4),
+			rgba(0, 45, 88, 0.9));
 	width: 80%;
 	height: 87%;
 	margin-left: 2vw;
@@ -95,25 +87,24 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	animation: borderanimate  7s;
+	animation: borderanimate 7s;
 }
 
 .logo {
 	position: absolute;
-	width: 55%;
-	height: 66%;
-	/* margin:	10% 7%; */
+	top: 30vh;
+	height: 44vh;
+	left: 33vw;
+	width: 33vw;
 	border-radius: 7vw;
 	border: 0.5vh rgb(255, 200, 0) dashed;
 }
 
 .formRow {
-	background: repeating-linear-gradient(
-		190deg,
-		rgba(242, 228, 77, 0.7),
-		rgba(0, 150, 177, 0.4),
-		rgba(22, 207, 220, 0.9)
-	);
+	background: repeating-linear-gradient(190deg,
+			rgba(242, 228, 77, 0.7),
+			rgba(0, 150, 177, 0.4),
+			rgba(22, 207, 220, 0.9));
 	width: 90%;
 	height: 22%;
 	margin-top: 4vh;
@@ -121,7 +112,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	animation: borderanimate  4s;
+	animation: borderanimate 4s;
 }
 
 .formRow input {
@@ -130,7 +121,7 @@
 	padding: 1vh;
 	direction: rtl;
 	text-align: center;
-	animation: borderanimate  13s;
+	animation: borderanimate 13s;
 	height: 67%;
 	font-size: 1vw;
 	margin-left: 1vh;
@@ -147,24 +138,21 @@
 	border: dotted 0.2vh rgb(1, 46, 68);
 	background: radial-gradient(rgb(0, 255, 238), rgb(14, 163, 193));
 }
+
 .slash {
-	background: radial-gradient(
-		rgb(154, 216, 255),
-		rgb(145, 233, 250),
-		rgb(198, 240, 255)
-	);
+	background: radial-gradient(rgb(154, 216, 255),
+			rgb(145, 233, 250),
+			rgb(198, 240, 255));
 	opacity: 0.4;
 	padding: 0.1vh 1vh;
 	border-radius: 77vh;
 }
 
 .buttonBox {
-	background: radial-gradient(
-		rgba(11, 22, 44, 0.4),
-		rgba(22, 33, 55, 0.5),
-		rgba(33, 44, 66, 0.6),
-		rgba(44, 55, 77, 0.7)
-	);
+	background: radial-gradient(rgba(11, 22, 44, 0.4),
+			rgba(22, 33, 55, 0.5),
+			rgba(33, 44, 66, 0.6),
+			rgba(44, 55, 77, 0.7));
 	width: 77%;
 	height: 7vh;
 	display: flex;
@@ -174,19 +162,19 @@
 	border: ridge 1vh rgba(11, 22, 55, 0.4);
 	box-shadow: 1px 1px 7px 1px rgba(16, 219, 234, 0.5),
 		1px 1px 7px 4px #08b8f3 inset;
-	animation: borderanimate  13s;
+	animation: borderanimate 13s;
 }
 
 .buttonBox button {
 	font-size: 2vh;
 	padding: 0.7vh 1vh;
-	animation: borderanimate  2s;
+	animation: borderanimate 2s;
 	cursor: pointer;
 }
 
 .buttonBox button:hover {
 	color: #02053e;
-	animation: borderanimate  0.2s reverse;
+	animation: borderanimate 0.2s reverse;
 	transform: scale(1.2);
 	background-color: #7d5af8;
 }
@@ -197,6 +185,7 @@
 	background-color: rgba(29, 209, 228, 0.9);
 	border: dashed 0.3vh #e3f7ff;
 }
+
 .cancel {
 	width: 22%;
 	border-radius: 2vh 4vh;
@@ -216,15 +205,18 @@
 	.formRow {
 		width: 100%;
 	}
+
 	.formRow input {
 		width: 64%;
 		font-size: 2vh;
 	}
+
 	.logo {
 		width: 97%;
 		border: none;
 	}
-	.buttonBox{
+
+	.buttonBox {
 		margin-top: 2vh;
 	}
 }
