--- a/src/pages/Login/index.module.css
+++ b/src/pages/Login/index.module.css
@@ -1,5 +1,3 @@
-/** @format */
-
 @keyframes borderanimate {
 	30% {
 		border-radius: 44vh 22vh;
@@ -50,11 +48,21 @@
 	width: 50%;
 	height: 67%;
 	background: repeating-linear-gradient(190deg,
-			rgba(0, 55, 66, 0.7),
-			rgba(0, 51, 77, 0.4),
-			rgba(0, 55, 99, 0.9));
+			rgba(247, 179, 30, 0.7),
+			rgba(63, 164, 214, 0.929),
+			rgba(255, 161, 9, 0.9));
 	border-radius: 100vh 1vh;
 	padding-top: 3vh;
+}
+
+.logo {
+	position: absolute;
+	height: 44vh;
+	top: 28vh;
+	left: 33vw;
+	width: 33vw;
+	border-radius: 7vw;
+	border: .3vh rgb(255, 200, 0) dashed;
 }
 
 .formShadow {
@@ -64,9 +72,9 @@
 	background: repeating-linear-gradient(190deg,
 			rgba(242, 228, 77, 0.7),
 			rgba(0, 150, 177, 0.4),
-			rgba(22, 207, 220, 0.9));
+			rgba(220, 134, 22, 0.9));
 	border-radius: 1vh 100vh;
-	border: ridge 1vh #065a5a;
+	border: ridge 1vh #fff87ce9;
 	animation: borderanimate 7s;
 	flex-direction: column;
 	display: flex;
@@ -77,9 +85,11 @@
 .formInnerBox {
 	padding-top: 3vh;
 	background: repeating-linear-gradient(190deg,
-			rgba(0, 45, 55, 0.7),
-			rgba(0, 41, 66, 0.4),
-			rgba(0, 45, 88, 0.9));
+			rgba(252, 148, 43, 0.836)7%,
+			rgba(248, 245, 41, 0.769)50%,
+			rgba(219, 80, 16, 0.9))22%;
+	border-radius: 0 0 12vh 2vh;
+	border: ridge .2vh rgba(234, 255, 9, 0.9);
 	width: 80%;
 	height: 87%;
 	margin-left: 2vw;
@@ -90,15 +100,6 @@
 	animation: borderanimate 7s;
 }
 
-.logo {
-	position: absolute;
-	top: 30vh;
-	height: 44vh;
-	left: 33vw;
-	width: 33vw;
-	border-radius: 7vw;
-	border: 0.5vh rgb(255, 200, 0) dashed;
-}
 
 .formRow {
 	background: repeating-linear-gradient(190deg,
@@ -113,6 +114,7 @@
 	align-items: center;
 	justify-content: space-around;
 	animation: borderanimate 4s;
+	color: #000110;
 }
 
 .formRow input {
@@ -125,8 +127,9 @@
 	height: 67%;
 	font-size: 1vw;
 	margin-left: 1vh;
-	border: ridge 1vh rgb(23, 255, 243);
-	border-radius: 1vh;
+	border: ridge .4vh rgb(255, 193, 23);
+	border-radius: .7vh;
+	outline: none;
 }
 
 .formRow label {
@@ -134,9 +137,8 @@
 	margin-left: 1vh;
 	font-size: 2vh;
 	padding: 1vh;
-	border-radius: 4vh;
-	border: dotted 0.2vh rgb(1, 46, 68);
-	background: radial-gradient(rgb(0, 255, 238), rgb(14, 163, 193));
+	border-radius: .5vh;
+	background: linear-gradient(rgb(247, 220, 123), rgb(203, 245, 253));
 }
 
 .slash {
@@ -149,19 +151,20 @@
 }
 
 .buttonBox {
-	background: radial-gradient(rgba(11, 22, 44, 0.4),
-			rgba(22, 33, 55, 0.5),
-			rgba(33, 44, 66, 0.6),
-			rgba(44, 55, 77, 0.7));
+	background: radial-gradient(rgba(249, 185, 21, 0.4),
+			rgba(249, 234, 72, 0.926),
+			rgba(255, 238, 108, 0.6),
+			rgba(188, 233, 228, 0.7));
 	width: 77%;
 	height: 7vh;
 	display: flex;
+	margin: 3vh;
 	justify-content: space-around;
 	align-items: center;
 	border-radius: 55vh 12vh;
-	border: ridge 1vh rgba(11, 22, 55, 0.4);
-	box-shadow: 1px 1px 7px 1px rgba(16, 219, 234, 0.5),
-		1px 1px 7px 4px #08b8f3 inset;
+	border: ridge 1vh rgba(6, 121, 166, 0.4);
+	box-shadow: 1px 1px 7px 1px rgba(245, 245, 90, 0.5),
+		1px 1px 7px 2px #f3b008 inset;
 	animation: borderanimate 13s;
 }
 
@@ -172,28 +175,25 @@
 	cursor: pointer;
 }
 
-.buttonBox button:hover {
-	color: #02053e;
+.formRow input:hover,
+.formRow label:hover,
+.submit:hover,
+.cancel:hover {
 	animation: borderanimate 0.2s reverse;
 	transform: scale(1.2);
-	background-color: #7d5af8;
+	cursor: pointer;
 }
 
 .submit {
-	width: 22%;
-	border-radius: 4vh 2vh;
-	background-color: rgba(29, 209, 228, 0.9);
+	width: 77%;
+	border-radius: 14vh 2vh;
+	background: linear-gradient(22deg, rgba(99, 125, 91, .9), rgba(112, 221, 212, .9));
 	border: dashed 0.3vh #e3f7ff;
 }
 
-.cancel {
-	width: 22%;
-	border-radius: 2vh 4vh;
-	background-color: rgba(243, 121, 8, 0.9);
-	border: dotted 0.3vh #e8d20f;
-}
 
-@media (max-width: 600px) {
+
+@media (max-width: 777px) {
 	.formBox {
 		width: 97%;
 	}
@@ -212,8 +212,10 @@
 	}
 
 	.logo {
-		width: 97%;
+		left: 14%;
+		opacity: .5;
 		border: none;
+		width: 72%;
 	}
 
 	.buttonBox {
