--- a/src/pages/Login/index.module.css
+++ b/src/pages/Login/index.module.css
@@ -1,3 +1,5 @@
+/** @format */
+
 @keyframes borderanimate {
 	30% {
 		border-radius: 44vh 22vh;
@@ -39,18 +41,22 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: radial-gradient(rgb(255, 235, 163),
-			rgb(249, 239, 56),
-			rgb(145, 112, 4));
+	background: radial-gradient(
+		rgb(255, 235, 163),
+		rgb(249, 239, 56),
+		rgb(145, 112, 4)
+	);
 }
 
 .formBox {
 	width: 50%;
 	height: 67%;
-	background: repeating-linear-gradient(190deg,
-			rgba(247, 179, 30, 0.7),
-			rgba(63, 164, 214, 0.929),
-			rgba(255, 161, 9, 0.9));
+	background: repeating-linear-gradient(
+		190deg,
+		rgba(247, 179, 30, 0.7),
+		rgba(63, 164, 214, 0.929),
+		rgba(255, 161, 9, 0.9)
+	);
 	border-radius: 100vh 1vh;
 	padding-top: 3vh;
 }
@@ -62,17 +68,19 @@
 	left: 33vw;
 	width: 33vw;
 	border-radius: 7vw;
-	border: .3vh rgb(255, 200, 0) dashed;
+	border: 0.3vh rgb(255, 200, 0) dashed;
 }
 
 .formShadow {
 	position: absolute;
 	width: 50%;
 	height: 67%;
-	background: repeating-linear-gradient(190deg,
-			rgba(242, 228, 77, 0.7),
-			rgba(0, 150, 177, 0.4),
-			rgba(220, 134, 22, 0.9));
+	background: repeating-linear-gradient(
+		190deg,
+		rgba(242, 228, 77, 0.7),
+		rgba(175, 242, 254, 0.4),
+		rgba(220, 134, 22, 0.9)
+	);
 	border-radius: 1vh 100vh;
 	border: ridge 1vh #fff87ce9;
 	animation: borderanimate 7s;
@@ -84,12 +92,15 @@
 
 .formInnerBox {
 	padding-top: 3vh;
-	background: repeating-linear-gradient(190deg,
-			rgba(252, 148, 43, 0.836)7%,
-			rgba(248, 245, 41, 0.769)50%,
-			rgba(219, 80, 16, 0.9))22%;
+	background: repeating-linear-gradient(
+			190deg,
+			rgba(252, 148, 43, 0.836) 7%,
+			rgba(248, 245, 41, 0.769) 50%,
+			rgba(219, 80, 16, 0.9)
+		)
+		22%;
 	border-radius: 0 0 12vh 2vh;
-	border: ridge .2vh rgba(234, 255, 9, 0.9);
+	border: ridge 0.2vh rgba(234, 255, 9, 0.9);
 	width: 80%;
 	height: 87%;
 	margin-left: 2vw;
@@ -100,20 +111,21 @@
 	animation: borderanimate 7s;
 }
 
-
 .formRow {
-	background: repeating-linear-gradient(190deg,
-			rgba(242, 228, 77, 0.7),
-			rgba(0, 150, 177, 0.4),
-			rgba(22, 207, 220, 0.9));
+	background: repeating-linear-gradient(
+		190deg,
+		rgba(242, 228, 77, 0.7),
+		rgba(0, 150, 177, 0.4),
+		rgba(22, 207, 220, 0.9)
+	);
 	width: 90%;
 	height: 22%;
 	margin-top: 4vh;
 	padding: 1vh;
+	border-radius: 2vh 4vh;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	animation: borderanimate 4s;
 	color: #000110;
 }
 
@@ -123,12 +135,11 @@
 	padding: 1vh;
 	direction: rtl;
 	text-align: center;
-	animation: borderanimate 13s;
 	height: 67%;
 	font-size: 1vw;
 	margin-left: 1vh;
-	border: ridge .4vh rgb(255, 193, 23);
-	border-radius: .7vh;
+	border: ridge 0.2vh rgb(255, 238, 192);
+	border-radius: 0.7vh;
 	outline: none;
 }
 
@@ -137,24 +148,28 @@
 	margin-left: 1vh;
 	font-size: 2vh;
 	padding: 1vh;
-	border-radius: .5vh;
+	border-radius: 0.5vh;
 	background: linear-gradient(rgb(247, 220, 123), rgb(203, 245, 253));
 }
 
 .slash {
-	background: radial-gradient(rgb(154, 216, 255),
-			rgb(145, 233, 250),
-			rgb(198, 240, 255));
+	background: radial-gradient(
+		rgb(154, 216, 255),
+		rgb(145, 233, 250),
+		rgb(198, 240, 255)
+	);
 	opacity: 0.4;
 	padding: 0.1vh 1vh;
 	border-radius: 77vh;
 }
 
 .buttonBox {
-	background: radial-gradient(rgba(249, 185, 21, 0.4),
-			rgba(249, 234, 72, 0.926),
-			rgba(255, 238, 108, 0.6),
-			rgba(188, 233, 228, 0.7));
+	background: radial-gradient(
+		rgba(249, 185, 21, 0.4),
+		rgba(249, 234, 72, 0.926),
+		rgba(255, 238, 108, 0.6),
+		rgba(188, 233, 228, 0.7)
+	);
 	width: 77%;
 	height: 7vh;
 	display: flex;
@@ -165,20 +180,17 @@
 	border: ridge 1vh rgba(6, 121, 166, 0.4);
 	box-shadow: 1px 1px 7px 1px rgba(245, 245, 90, 0.5),
 		1px 1px 7px 2px #f3b008 inset;
-	animation: borderanimate 13s;
 }
 
 .buttonBox button {
 	font-size: 2vh;
 	padding: 0.7vh 1vh;
-	animation: borderanimate 2s;
 	cursor: pointer;
 }
 
 .formRow input:hover,
 .formRow label:hover,
-.submit:hover,
-.cancel:hover {
+.submit:hover {
 	animation: borderanimate 0.2s reverse;
 	transform: scale(1.2);
 	cursor: pointer;
@@ -187,11 +199,13 @@
 .submit {
 	width: 77%;
 	border-radius: 14vh 2vh;
-	background: linear-gradient(22deg, rgba(99, 125, 91, .9), rgba(112, 221, 212, .9));
+	background: linear-gradient(
+		22deg,
+		rgba(244, 168, 63, 0.9),
+		rgba(112, 221, 212, 0.9)
+	);
 	border: dashed 0.3vh #e3f7ff;
 }
-
-
 
 @media (max-width: 777px) {
 	.formBox {
@@ -213,7 +227,7 @@
 
 	.logo {
 		left: 14%;
-		opacity: .5;
+		opacity: 0.5;
 		border: none;
 		width: 72%;
 	}
